segueも貼り直す必要がありそう

--- a/taskapp/Base.lproj/Main.storyboard
+++ b/taskapp/Base.lproj/Main.storyboard
@@ -59,14 +59,14 @@
                     <navigationItem key="navigationItem" id="JjD-Xt-ti2">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="CR6-Ix-uFf">
                             <connections>
-                                <segue destination="TkM-Cj-nUe" kind="show" id="IxB-cG-FBY"/>
+                                <segue destination="TkM-Cj-nUe" kind="show" id="tgk-gH-U9u"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="taskTabkeView" destination="fA8-U0-N2M" id="mmi-lH-33n"/>
-                        <segue destination="TkM-Cj-nUe" kind="show" identifier="selectTask" id="MhF-7E-K3v"/>
+                        <segue destination="TkM-Cj-nUe" kind="show" identifier="selectTask" id="cje-ey-bB3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -167,6 +167,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="MhF-7E-K3v"/>
+        <segue reference="cje-ey-bB3"/>
     </inferredMetricsTieBreakers>
 </document>
